welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: '(' expected but identifier found.
 if value == nums.(i) {i}
    ^indexOfValue:6: error: illegal start of simple expression
}}
^